@@ -18,16 +18,23 @@
  */
 package org.apache.iceberg.rest;
 
+import com.github.benmanes.caffeine.cache.Cache;
+import com.github.benmanes.caffeine.cache.Caffeine;
+import com.github.benmanes.caffeine.cache.RemovalListener;
 import java.io.Closeable;
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.time.Duration;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.Future;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 import org.apache.iceberg.BaseTable;
 import org.apache.iceberg.CatalogProperties;
 import org.apache.iceberg.CatalogUtil;
@@ -55,7 +62,6 @@ import org.apache.iceberg.hadoop.Configurable;
 import org.apache.iceberg.io.CloseableGroup;
 import org.apache.iceberg.io.FileIO;
 import org.apache.iceberg.io.FileIOTracker;
-import org.apache.iceberg.io.StorageCredential;
 import org.apache.iceberg.metrics.MetricsReporter;
 import org.apache.iceberg.metrics.MetricsReporters;
 import org.apache.iceberg.relocated.com.google.common.base.Preconditions;
@@ -64,10 +70,11 @@ import org.apache.iceberg.relocated.com.google.common.collect.ImmutableMap;
 import org.apache.iceberg.relocated.com.google.common.collect.ImmutableSet;
 import org.apache.iceberg.relocated.com.google.common.collect.Lists;
 import org.apache.iceberg.relocated.com.google.common.collect.Maps;
-import org.apache.iceberg.rest.auth.AuthManager;
-import org.apache.iceberg.rest.auth.AuthManagers;
-import org.apache.iceberg.rest.auth.AuthSession;
-import org.apache.iceberg.rest.credentials.Credential;
+import org.apache.iceberg.rest.auth.AuthConfig;
+import org.apache.iceberg.rest.auth.DefaultAuthSession;
+import org.apache.iceberg.rest.auth.OAuth2Properties;
+import org.apache.iceberg.rest.auth.OAuth2Util;
+import org.apache.iceberg.rest.auth.OAuth2Util.AuthSession;
 import org.apache.iceberg.rest.requests.CommitTransactionRequest;
 import org.apache.iceberg.rest.requests.CreateNamespaceRequest;
 import org.apache.iceberg.rest.requests.CreateTableRequest;
@@ -85,9 +92,12 @@ import org.apache.iceberg.rest.responses.ListNamespacesResponse;
 import org.apache.iceberg.rest.responses.ListTablesResponse;
 import org.apache.iceberg.rest.responses.LoadTableResponse;
 import org.apache.iceberg.rest.responses.LoadViewResponse;
+import org.apache.iceberg.rest.responses.OAuthTokenResponse;
 import org.apache.iceberg.rest.responses.UpdateNamespacePropertiesResponse;
 import org.apache.iceberg.util.EnvironmentUtil;
+import org.apache.iceberg.util.Pair;
 import org.apache.iceberg.util.PropertyUtil;
+import org.apache.iceberg.util.ThreadPools;
 import org.apache.iceberg.view.BaseView;
 import org.apache.iceberg.view.ImmutableSQLViewRepresentation;
 import org.apache.iceberg.view.ImmutableViewVersion;
@@ -110,6 +120,20 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   // server supports view endpoints but doesn't send the "endpoints" field in the ConfigResponse
   static final String VIEW_ENDPOINTS_SUPPORTED = "view-endpoints-supported";
   public static final String REST_PAGE_SIZE = "rest-page-size";
+  private static final List<String> TOKEN_PREFERENCE_ORDER =
+      ImmutableList.of(
+          OAuth2Properties.ID_TOKEN_TYPE,
+          OAuth2Properties.ACCESS_TOKEN_TYPE,
+          OAuth2Properties.JWT_TOKEN_TYPE,
+          OAuth2Properties.SAML2_TOKEN_TYPE,
+          OAuth2Properties.SAML1_TOKEN_TYPE);
+
+  // Auth-related properties that are allowed to be passed to the table session
+  private static final Set<String> TABLE_SESSION_ALLOW_LIST =
+      ImmutableSet.<String>builder()
+          .add(OAuth2Properties.TOKEN)
+          .addAll(TOKEN_PREFERENCE_ORDER)
+          .build();
 
   // these default endpoints must not be updated in order to maintain backwards compatibility with
   // legacy servers
@@ -145,9 +169,11 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
   private final Function<Map<String, String>, RESTClient> clientBuilder;
   private final BiFunction<SessionContext, Map<String, String>, FileIO> ioBuilder;
+  private Cache<String, AuthSession> sessions = null;
+  private Cache<String, AuthSession> tableSessions = null;
   private FileIOTracker fileIOTracker = null;
   private AuthSession catalogAuth = null;
-  private AuthManager authManager;
+  private boolean keepTokenRefreshed = true;
   private RESTClient client = null;
   private ResourcePaths paths = null;
   private SnapshotMode snapshotMode = null;
@@ -159,6 +185,9 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   private CloseableGroup closeables = null;
   private Set<Endpoint> endpoints;
 
+  // a lazy thread pool for token refresh
+  private volatile ScheduledExecutorService refreshExecutor = null;
+
   enum SnapshotMode {
     ALL,
     REFS;
@@ -169,13 +198,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   }
 
   public RESTSessionCatalog() {
-    this(
-        config ->
-            HTTPClient.builder(config)
-                .uri(config.get(CatalogProperties.URI))
-                .withHeaders(RESTUtil.configHeaders(config))
-                .build(),
-        null);
+    this(config -> HTTPClient.builder(config).uri(config.get(CatalogProperties.URI)).build(), null);
   }
 
   public RESTSessionCatalog(
@@ -186,6 +209,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     this.ioBuilder = ioBuilder;
   }
 
+  @SuppressWarnings("checkstyle:CyclomaticComplexity")
   @Override
   public void initialize(String name, Map<String, String> unresolved) {
     Preconditions.checkArgument(unresolved != null, "Invalid configuration: null");
@@ -194,18 +218,55 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     // catalog service
     Map<String, String> props = EnvironmentUtil.resolveAll(unresolved);
 
-    this.authManager = AuthManagers.loadAuthManager(name, props);
+    long startTimeMillis =
+        System.currentTimeMillis(); // keep track of the init start time for token refresh
+    String initToken = props.get(OAuth2Properties.TOKEN);
+    boolean hasInitToken = initToken != null;
 
+    // fetch auth and config to complete initialization
     ConfigResponse config;
-    try (RESTClient initClient = clientBuilder.apply(props);
-        AuthSession initSession = authManager.initSession(initClient, props)) {
-      config = fetchConfig(initClient.withAuthSession(initSession), initSession, props);
+    OAuthTokenResponse authResponse;
+    String credential = props.get(OAuth2Properties.CREDENTIAL);
+    boolean hasCredential = credential != null && !credential.isEmpty();
+    String scope = props.getOrDefault(OAuth2Properties.SCOPE, OAuth2Properties.CATALOG_SCOPE);
+    Map<String, String> optionalOAuthParams = OAuth2Util.buildOptionalParam(props);
+    if (!props.containsKey(OAuth2Properties.OAUTH2_SERVER_URI)
+        && (hasInitToken || hasCredential)
+        && !PropertyUtil.propertyAsBoolean(props, "rest.sigv4-enabled", false)) {
+      LOG.warn(
+          "Iceberg REST client is missing the OAuth2 server URI configuration and defaults to {}/{}. "
+              + "This automatic fallback will be removed in a future Iceberg release."
+              + "It is recommended to configure the OAuth2 endpoint using the '{}' property to be prepared. "
+              + "This warning will disappear if the OAuth2 endpoint is explicitly configured. "
+              + "See https://github.com/apache/iceberg/issues/10537",
+          RESTUtil.stripTrailingSlash(props.get(CatalogProperties.URI)),
+          ResourcePaths.tokens(),
+          OAuth2Properties.OAUTH2_SERVER_URI);
+    }
+    String oauth2ServerUri =
+        props.getOrDefault(OAuth2Properties.OAUTH2_SERVER_URI, ResourcePaths.tokens());
+    try (DefaultAuthSession initSession =
+            DefaultAuthSession.of(HTTPHeaders.of(OAuth2Util.authHeaders(initToken)));
+        RESTClient initClient = clientBuilder.apply(props).withAuthSession(initSession)) {
+      Map<String, String> initHeaders = configHeaders(props);
+      if (hasCredential) {
+        authResponse =
+            OAuth2Util.fetchToken(
+                initClient, initHeaders, credential, scope, oauth2ServerUri, optionalOAuthParams);
+        Map<String, String> authHeaders =
+            RESTUtil.merge(initHeaders, OAuth2Util.authHeaders(authResponse.token()));
+        config = fetchConfig(initClient, authHeaders, props);
+      } else {
+        authResponse = null;
+        config = fetchConfig(initClient, initHeaders, props);
+      }
     } catch (IOException e) {
       throw new UncheckedIOException("Failed to close HTTP client", e);
     }
 
     // build the final configuration and set up the catalog's auth
     Map<String, String> mergedProps = config.merge(props);
+    Map<String, String> baseHeaders = configHeaders(mergedProps);
 
     if (config.endpoints().isEmpty()) {
       this.endpoints =
@@ -219,10 +280,39 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       this.endpoints = ImmutableSet.copyOf(config.endpoints());
     }
 
-    this.client = clientBuilder.apply(mergedProps);
+    this.sessions = newSessionCache(mergedProps);
+    this.tableSessions = newSessionCache(mergedProps);
+    this.keepTokenRefreshed =
+        PropertyUtil.propertyAsBoolean(
+            mergedProps,
+            OAuth2Properties.TOKEN_REFRESH_ENABLED,
+            OAuth2Properties.TOKEN_REFRESH_ENABLED_DEFAULT);
     this.paths = ResourcePaths.forCatalogProperties(mergedProps);
 
-    this.catalogAuth = authManager.catalogSession(client, mergedProps);
+    String token = mergedProps.get(OAuth2Properties.TOKEN);
+    this.catalogAuth =
+        new AuthSession(
+            baseHeaders,
+            AuthConfig.builder()
+                .credential(credential)
+                .scope(scope)
+                .oauth2ServerUri(oauth2ServerUri)
+                .optionalOAuthParams(optionalOAuthParams)
+                .build());
+
+    this.client = clientBuilder.apply(mergedProps).withAuthSession(catalogAuth);
+
+    if (authResponse != null) {
+      this.catalogAuth =
+          AuthSession.fromTokenResponse(
+              client, tokenRefreshExecutor(name), authResponse, startTimeMillis, catalogAuth);
+      this.client = client.withAuthSession(catalogAuth);
+    } else if (token != null) {
+      this.catalogAuth =
+          AuthSession.fromAccessToken(
+              client, tokenRefreshExecutor(name), token, expiresAtMillis(mergedProps), catalogAuth);
+      this.client = client.withAuthSession(catalogAuth);
+    }
 
     this.pageSize = PropertyUtil.propertyAsNullableInt(mergedProps, REST_PAGE_SIZE);
     if (pageSize != null) {
@@ -234,8 +324,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     this.fileIOTracker = new FileIOTracker();
     this.closeables = new CloseableGroup();
-    this.closeables.addCloseable(this.catalogAuth);
-    this.closeables.addCloseable(this.authManager);
     this.closeables.addCloseable(this.io);
     this.closeables.addCloseable(this.client);
     this.closeables.addCloseable(fileIOTracker);
@@ -252,6 +340,27 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     this.reportingViaRestEnabled =
         PropertyUtil.propertyAsBoolean(mergedProps, REST_METRICS_REPORTING_ENABLED, true);
     super.initialize(name, mergedProps);
+  }
+
+  private AuthSession session(SessionContext context) {
+    AuthSession session =
+        sessions.get(
+            context.sessionId(),
+            id -> {
+              Pair<String, Supplier<AuthSession>> newSession =
+                  newSession(context.credentials(), context.properties(), catalogAuth);
+              if (null != newSession) {
+                return newSession.second().get();
+              }
+
+              return null;
+            });
+
+    return session != null ? session : catalogAuth;
+  }
+
+  private Supplier<Map<String, String>> headers(SessionContext context) {
+    return session(context)::headers;
   }
 
   @Override
@@ -275,16 +384,13 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     do {
       queryParams.put("pageToken", pageToken);
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       ListTablesResponse response =
-          client
-              .withAuthSession(contextualSession)
-              .get(
-                  paths.tables(ns),
-                  queryParams,
-                  ListTablesResponse.class,
-                  Map.of(),
-                  ErrorHandlers.namespaceErrorHandler());
+          client.get(
+              paths.tables(ns),
+              queryParams,
+              ListTablesResponse.class,
+              headers(context),
+              ErrorHandlers.namespaceErrorHandler());
       pageToken = response.nextPageToken();
       tables.addAll(response.identifiers());
     } while (pageToken != null);
@@ -298,10 +404,8 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkIdentifierIsValid(identifier);
 
     try {
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      client
-          .withAuthSession(contextualSession)
-          .delete(paths.table(identifier), null, Map.of(), ErrorHandlers.tableErrorHandler());
+      client.delete(
+          paths.table(identifier), null, headers(context), ErrorHandlers.tableErrorHandler());
       return true;
     } catch (NoSuchTableException e) {
       return false;
@@ -314,15 +418,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkIdentifierIsValid(identifier);
 
     try {
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      client
-          .withAuthSession(contextualSession)
-          .delete(
-              paths.table(identifier),
-              ImmutableMap.of("purgeRequested", "true"),
-              null,
-              Map.of(),
-              ErrorHandlers.tableErrorHandler());
+      client.delete(
+          paths.table(identifier),
+          ImmutableMap.of("purgeRequested", "true"),
+          null,
+          headers(context),
+          ErrorHandlers.tableErrorHandler());
       return true;
     } catch (NoSuchTableException e) {
       return false;
@@ -339,10 +440,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         RenameTableRequest.builder().withSource(from).withDestination(to).build();
 
     // for now, ignore the response because there is no way to return it
-    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    client
-        .withAuthSession(contextualSession)
-        .post(paths.rename(), request, null, Map.of(), ErrorHandlers.tableErrorHandler());
+    client.post(paths.rename(), request, null, headers(context), ErrorHandlers.tableErrorHandler());
   }
 
   @Override
@@ -350,10 +448,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     try {
       checkIdentifierIsValid(identifier);
       if (endpoints.contains(Endpoint.V1_TABLE_EXISTS)) {
-        AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-        client
-            .withAuthSession(contextualSession)
-            .head(paths.table(identifier), Map.of(), ErrorHandlers.tableErrorHandler());
+        client.head(paths.table(identifier), headers(context), ErrorHandlers.tableErrorHandler());
         return true;
       } else {
         // fallback in order to work with 1.7.x and older servers
@@ -367,15 +462,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   private LoadTableResponse loadInternal(
       SessionContext context, TableIdentifier identifier, SnapshotMode mode) {
     Endpoint.check(endpoints, Endpoint.V1_LOAD_TABLE);
-    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    return client
-        .withAuthSession(contextualSession)
-        .get(
-            paths.table(identifier),
-            mode.params(),
-            LoadTableResponse.class,
-            Map.of(),
-            ErrorHandlers.tableErrorHandler());
+    return client.get(
+        paths.table(identifier),
+        mode.params(),
+        LoadTableResponse.class,
+        headers(context),
+        ErrorHandlers.tableErrorHandler());
   }
 
   @Override
@@ -417,10 +509,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
 
     TableIdentifier finalIdentifier = loadedIdent;
-    Map<String, String> tableConf = response.config();
-    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    AuthSession tableSession =
-        authManager.tableSession(finalIdentifier, tableConf, contextualSession);
+    AuthSession session = tableSession(response.config(), session(context));
     TableMetadata tableMetadata;
 
     if (snapshotMode == SnapshotMode.REFS) {
@@ -439,13 +528,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       tableMetadata = response.tableMetadata();
     }
 
-    RESTClient tableClient = client.withAuthSession(tableSession);
     RESTTableOperations ops =
         new RESTTableOperations(
-            tableClient,
+            client,
             paths.table(finalIdentifier),
-            Map::of,
-            tableFileIO(context, tableConf, response.credentials()),
+            session::headers,
+            tableFileIO(context, response.config()),
             tableMetadata,
             endpoints);
 
@@ -455,7 +543,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         new BaseTable(
             ops,
             fullTableName(finalIdentifier),
-            metricsReporter(paths.metrics(finalIdentifier), tableClient));
+            metricsReporter(paths.metrics(finalIdentifier), session::headers));
     if (metadataType != null) {
       return MetadataTableUtils.createMetadataTableInstance(table, metadataType);
     }
@@ -469,10 +557,11 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
   }
 
-  private MetricsReporter metricsReporter(String metricsEndpoint, RESTClient restClient) {
+  private MetricsReporter metricsReporter(
+      String metricsEndpoint, Supplier<Map<String, String>> headers) {
     if (reportingViaRestEnabled && endpoints.contains(Endpoint.V1_REPORT_METRICS)) {
       RESTMetricsReporter restMetricsReporter =
-          new RESTMetricsReporter(restClient, metricsEndpoint, Map::of);
+          new RESTMetricsReporter(client, metricsEndpoint, headers);
       return MetricsReporters.combine(reporter, restMetricsReporter);
     } else {
       return this.reporter;
@@ -505,33 +594,28 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
             .metadataLocation(metadataFileLocation)
             .build();
 
-    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
     LoadTableResponse response =
-        client
-            .withAuthSession(contextualSession)
-            .post(
-                paths.register(ident.namespace()),
-                request,
-                LoadTableResponse.class,
-                Map.of(),
-                ErrorHandlers.tableErrorHandler());
+        client.post(
+            paths.register(ident.namespace()),
+            request,
+            LoadTableResponse.class,
+            headers(context),
+            ErrorHandlers.tableErrorHandler());
 
-    Map<String, String> tableConf = response.config();
-    AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
-    RESTClient tableClient = client.withAuthSession(tableSession);
+    AuthSession session = tableSession(response.config(), session(context));
     RESTTableOperations ops =
         new RESTTableOperations(
-            tableClient,
+            client,
             paths.table(ident),
-            Map::of,
-            tableFileIO(context, tableConf, response.credentials()),
+            session::headers,
+            tableFileIO(context, response.config()),
             response.tableMetadata(),
             endpoints);
 
     trackFileIO(ops);
 
     return new BaseTable(
-        ops, fullTableName(ident), metricsReporter(paths.metrics(ident), tableClient));
+        ops, fullTableName(ident), metricsReporter(paths.metrics(ident), session::headers));
   }
 
   @Override
@@ -542,15 +626,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         CreateNamespaceRequest.builder().withNamespace(namespace).setProperties(metadata).build();
 
     // for now, ignore the response because there is no way to return it
-    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    client
-        .withAuthSession(contextualSession)
-        .post(
-            paths.namespaces(),
-            request,
-            CreateNamespaceResponse.class,
-            Map.of(),
-            ErrorHandlers.namespaceErrorHandler());
+    client.post(
+        paths.namespaces(),
+        request,
+        CreateNamespaceResponse.class,
+        headers(context),
+        ErrorHandlers.namespaceErrorHandler());
   }
 
   @Override
@@ -572,16 +653,13 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     do {
       queryParams.put("pageToken", pageToken);
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       ListNamespacesResponse response =
-          client
-              .withAuthSession(contextualSession)
-              .get(
-                  paths.namespaces(),
-                  queryParams,
-                  ListNamespacesResponse.class,
-                  Map.of(),
-                  ErrorHandlers.namespaceErrorHandler());
+          client.get(
+              paths.namespaces(),
+              queryParams,
+              ListNamespacesResponse.class,
+              headers(context),
+              ErrorHandlers.namespaceErrorHandler());
       pageToken = response.nextPageToken();
       namespaces.addAll(response.namespaces());
     } while (pageToken != null);
@@ -594,10 +672,8 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     try {
       checkNamespaceIsValid(namespace);
       if (endpoints.contains(Endpoint.V1_NAMESPACE_EXISTS)) {
-        AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-        client
-            .withAuthSession(contextualSession)
-            .head(paths.namespace(namespace), Map.of(), ErrorHandlers.namespaceErrorHandler());
+        client.head(
+            paths.namespace(namespace), headers(context), ErrorHandlers.namespaceErrorHandler());
         return true;
       } else {
         // fallback in order to work with 1.7.x and older servers
@@ -614,15 +690,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkNamespaceIsValid(ns);
 
     // TODO: rename to LoadNamespaceResponse?
-    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
     GetNamespaceResponse response =
-        client
-            .withAuthSession(contextualSession)
-            .get(
-                paths.namespace(ns),
-                GetNamespaceResponse.class,
-                Map.of(),
-                ErrorHandlers.namespaceErrorHandler());
+        client.get(
+            paths.namespace(ns),
+            GetNamespaceResponse.class,
+            headers(context),
+            ErrorHandlers.namespaceErrorHandler());
     return response.properties();
   }
 
@@ -632,10 +705,8 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkNamespaceIsValid(ns);
 
     try {
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      client
-          .withAuthSession(contextualSession)
-          .delete(paths.namespace(ns), null, Map.of(), ErrorHandlers.dropNamespaceErrorHandler());
+      client.delete(
+          paths.namespace(ns), null, headers(context), ErrorHandlers.namespaceErrorHandler());
       return true;
     } catch (NoSuchNamespaceException e) {
       return false;
@@ -651,24 +722,63 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     UpdateNamespacePropertiesRequest request =
         UpdateNamespacePropertiesRequest.builder().updateAll(updates).removeAll(removals).build();
 
-    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
     UpdateNamespacePropertiesResponse response =
-        client
-            .withAuthSession(contextualSession)
-            .post(
-                paths.namespaceProperties(ns),
-                request,
-                UpdateNamespacePropertiesResponse.class,
-                Map.of(),
-                ErrorHandlers.namespaceErrorHandler());
+        client.post(
+            paths.namespaceProperties(ns),
+            request,
+            UpdateNamespacePropertiesResponse.class,
+            headers(context),
+            ErrorHandlers.namespaceErrorHandler());
 
     return !response.updated().isEmpty();
   }
 
+  private ScheduledExecutorService tokenRefreshExecutor(String catalogName) {
+    if (!keepTokenRefreshed) {
+      return null;
+    }
+
+    if (refreshExecutor == null) {
+      synchronized (this) {
+        if (refreshExecutor == null) {
+          this.refreshExecutor = ThreadPools.newScheduledPool(catalogName + "-token-refresh", 1);
+        }
+      }
+    }
+
+    return refreshExecutor;
+  }
+
   @Override
   public void close() throws IOException {
+    shutdownRefreshExecutor();
+
     if (closeables != null) {
       closeables.close();
+    }
+  }
+
+  private void shutdownRefreshExecutor() {
+    if (refreshExecutor != null) {
+      ScheduledExecutorService service = refreshExecutor;
+      this.refreshExecutor = null;
+
+      List<Runnable> tasks = service.shutdownNow();
+      tasks.forEach(
+          task -> {
+            if (task instanceof Future) {
+              ((Future<?>) task).cancel(true);
+            }
+          });
+
+      try {
+        if (!service.awaitTermination(1, TimeUnit.MINUTES)) {
+          LOG.warn("Timed out waiting for refresh executor to terminate");
+        }
+      } catch (InterruptedException e) {
+        LOG.warn("Interrupted while waiting for refresh executor to terminate", e);
+        Thread.currentThread().interrupt();
+      }
     }
   }
 
@@ -687,35 +797,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       this.ident = ident;
       this.schema = schema;
       this.context = context;
-      propertiesBuilder.putAll(tableDefaultProperties());
-    }
-
-    /**
-     * Get default table properties set at Catalog level through catalog properties.
-     *
-     * @return default table properties specified in catalog properties
-     */
-    private Map<String, String> tableDefaultProperties() {
-      Map<String, String> tableDefaultProperties =
-          PropertyUtil.propertiesWithPrefix(properties(), CatalogProperties.TABLE_DEFAULT_PREFIX);
-      LOG.info(
-          "Table properties set at catalog level through catalog properties: {}",
-          tableDefaultProperties);
-      return tableDefaultProperties;
-    }
-
-    /**
-     * Get table properties that are enforced at Catalog level through catalog properties.
-     *
-     * @return overriding table properties enforced through catalog properties
-     */
-    private Map<String, String> tableOverrideProperties() {
-      Map<String, String> tableOverrideProperties =
-          PropertyUtil.propertiesWithPrefix(properties(), CatalogProperties.TABLE_OVERRIDE_PREFIX);
-      LOG.info(
-          "Table properties enforced at catalog level through catalog properties: {}",
-          tableOverrideProperties);
-      return tableOverrideProperties;
     }
 
     @Override
@@ -753,7 +834,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     @Override
     public Table create() {
       Endpoint.check(endpoints, Endpoint.V1_CREATE_TABLE);
-      propertiesBuilder.putAll(tableOverrideProperties());
       CreateTableRequest request =
           CreateTableRequest.builder()
               .withName(ident.name())
@@ -761,36 +841,31 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .withPartitionSpec(spec)
               .withWriteOrder(writeOrder)
               .withLocation(location)
-              .setProperties(propertiesBuilder.buildKeepingLast())
+              .setProperties(propertiesBuilder.build())
               .build();
 
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       LoadTableResponse response =
-          client
-              .withAuthSession(contextualSession)
-              .post(
-                  paths.tables(ident.namespace()),
-                  request,
-                  LoadTableResponse.class,
-                  Map.of(),
-                  ErrorHandlers.tableErrorHandler());
+          client.post(
+              paths.tables(ident.namespace()),
+              request,
+              LoadTableResponse.class,
+              headers(context),
+              ErrorHandlers.tableErrorHandler());
 
-      Map<String, String> tableConf = response.config();
-      AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
-      RESTClient tableClient = client.withAuthSession(tableSession);
+      AuthSession session = tableSession(response.config(), session(context));
       RESTTableOperations ops =
           new RESTTableOperations(
-              tableClient,
+              client,
               paths.table(ident),
-              Map::of,
-              tableFileIO(context, tableConf, response.credentials()),
+              session::headers,
+              tableFileIO(context, response.config()),
               response.tableMetadata(),
               endpoints);
 
       trackFileIO(ops);
 
       return new BaseTable(
-          ops, fullTableName(ident), metricsReporter(paths.metrics(ident), tableClient));
+          ops, fullTableName(ident), metricsReporter(paths.metrics(ident), session::headers));
     }
 
     @Override
@@ -799,18 +874,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       LoadTableResponse response = stageCreate();
       String fullName = fullTableName(ident);
 
-      Map<String, String> tableConf = response.config();
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
+      AuthSession session = tableSession(response.config(), session(context));
       TableMetadata meta = response.tableMetadata();
 
-      RESTClient tableClient = client.withAuthSession(tableSession);
       RESTTableOperations ops =
           new RESTTableOperations(
-              tableClient,
+              client,
               paths.table(ident),
-              Map::of,
-              tableFileIO(context, tableConf, response.credentials()),
+              session::headers,
+              tableFileIO(context, response.config()),
               RESTTableOperations.UpdateType.CREATE,
               createChanges(meta),
               meta,
@@ -819,7 +891,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       trackFileIO(ops);
 
       return Transactions.createTableTransaction(
-          fullName, ops, meta, metricsReporter(paths.metrics(ident), tableClient));
+          fullName, ops, meta, metricsReporter(paths.metrics(ident), session::headers));
     }
 
     @Override
@@ -832,13 +904,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       LoadTableResponse response = loadInternal(context, ident, snapshotMode);
       String fullName = fullTableName(ident);
 
-      Map<String, String> tableConf = response.config();
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
+      AuthSession session = tableSession(response.config(), session(context));
       TableMetadata base = response.tableMetadata();
 
-      propertiesBuilder.putAll(tableOverrideProperties());
-      Map<String, String> tableProperties = propertiesBuilder.buildKeepingLast();
+      Map<String, String> tableProperties = propertiesBuilder.build();
       TableMetadata replacement =
           base.buildReplacement(
               schema,
@@ -867,13 +936,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         changes.add(new MetadataUpdate.SetDefaultSortOrder(replacement.defaultSortOrderId()));
       }
 
-      RESTClient tableClient = client.withAuthSession(tableSession);
       RESTTableOperations ops =
           new RESTTableOperations(
-              tableClient,
+              client,
               paths.table(ident),
-              Map::of,
-              tableFileIO(context, tableConf, response.credentials()),
+              session::headers,
+              tableFileIO(context, response.config()),
               RESTTableOperations.UpdateType.REPLACE,
               changes.build(),
               base,
@@ -882,7 +950,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       trackFileIO(ops);
 
       return Transactions.replaceTableTransaction(
-          fullName, ops, replacement, metricsReporter(paths.metrics(ident), tableClient));
+          fullName, ops, replacement, metricsReporter(paths.metrics(ident), session::headers));
     }
 
     @Override
@@ -901,8 +969,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
 
     private LoadTableResponse stageCreate() {
-      propertiesBuilder.putAll(tableOverrideProperties());
-      Map<String, String> tableProperties = propertiesBuilder.buildKeepingLast();
+      Map<String, String> tableProperties = propertiesBuilder.build();
 
       CreateTableRequest request =
           CreateTableRequest.builder()
@@ -915,15 +982,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .setProperties(tableProperties)
               .build();
 
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      return client
-          .withAuthSession(contextualSession)
-          .post(
-              paths.tables(ident.namespace()),
-              request,
-              LoadTableResponse.class,
-              Map.of(),
-              ErrorHandlers.tableErrorHandler());
+      return client.post(
+          paths.tables(ident.namespace()),
+          request,
+          LoadTableResponse.class,
+          headers(context),
+          ErrorHandlers.tableErrorHandler());
     }
   }
 
@@ -971,38 +1035,44 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   }
 
   private FileIO newFileIO(SessionContext context, Map<String, String> properties) {
-    return newFileIO(context, properties, ImmutableList.of());
-  }
-
-  private FileIO newFileIO(
-      SessionContext context, Map<String, String> properties, List<Credential> storageCredentials) {
     if (null != ioBuilder) {
       return ioBuilder.apply(context, properties);
     } else {
       String ioImpl = properties.getOrDefault(CatalogProperties.FILE_IO_IMPL, DEFAULT_FILE_IO_IMPL);
-      return CatalogUtil.loadFileIO(
-          ioImpl,
-          properties,
-          conf,
-          storageCredentials.stream()
-              .map(c -> StorageCredential.create(c.prefix(), c.config()))
-              .collect(Collectors.toList()));
+      return CatalogUtil.loadFileIO(ioImpl, properties, conf);
     }
   }
 
-  private FileIO tableFileIO(
-      SessionContext context, Map<String, String> config, List<Credential> storageCredentials) {
-    if (config.isEmpty() && ioBuilder == null && storageCredentials.isEmpty()) {
-      return io; // reuse client and io since config/credentials are the same
+  private FileIO tableFileIO(SessionContext context, Map<String, String> config) {
+    if (config.isEmpty() && ioBuilder == null) {
+      return io; // reuse client and io since config is the same
     }
 
     Map<String, String> fullConf = RESTUtil.merge(properties(), config);
 
-    return newFileIO(context, fullConf, storageCredentials);
+    return newFileIO(context, fullConf);
+  }
+
+  private AuthSession tableSession(Map<String, String> tableConf, AuthSession parent) {
+    Map<String, String> credentials = Maps.newHashMapWithExpectedSize(tableConf.size());
+    for (String prop : tableConf.keySet()) {
+      if (TABLE_SESSION_ALLOW_LIST.contains(prop)) {
+        credentials.put(prop, tableConf.get(prop));
+      }
+    }
+
+    Pair<String, Supplier<AuthSession>> newSession = newSession(credentials, tableConf, parent);
+    if (null == newSession) {
+      return parent;
+    }
+
+    AuthSession session = tableSessions.get(newSession.first(), id -> newSession.second().get());
+
+    return session != null ? session : parent;
   }
 
   private static ConfigResponse fetchConfig(
-      RESTClient client, AuthSession initialAuth, Map<String, String> properties) {
+      RESTClient client, Map<String, String> headers, Map<String, String> properties) {
     // send the client's warehouse location to the service to keep in sync
     // this is needed for cases where the warehouse is configured client side, but may be used on
     // the server side,
@@ -1016,16 +1086,74 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
 
     ConfigResponse configResponse =
-        client
-            .withAuthSession(initialAuth)
-            .get(
-                ResourcePaths.config(),
-                queryParams.build(),
-                ConfigResponse.class,
-                RESTUtil.configHeaders(properties),
-                ErrorHandlers.defaultErrorHandler());
+        client.get(
+            ResourcePaths.config(),
+            queryParams.build(),
+            ConfigResponse.class,
+            headers,
+            ErrorHandlers.defaultErrorHandler());
     configResponse.validate();
     return configResponse;
+  }
+
+  private Pair<String, Supplier<AuthSession>> newSession(
+      Map<String, String> credentials, Map<String, String> properties, AuthSession parent) {
+    if (credentials != null) {
+      // use the bearer token without exchanging
+      if (credentials.containsKey(OAuth2Properties.TOKEN)) {
+        return Pair.of(
+            credentials.get(OAuth2Properties.TOKEN),
+            () ->
+                AuthSession.fromAccessToken(
+                    client,
+                    tokenRefreshExecutor(name()),
+                    credentials.get(OAuth2Properties.TOKEN),
+                    expiresAtMillis(properties),
+                    parent));
+      }
+
+      if (credentials.containsKey(OAuth2Properties.CREDENTIAL)) {
+        // fetch a token using the client credentials flow
+        return Pair.of(
+            credentials.get(OAuth2Properties.CREDENTIAL),
+            () ->
+                AuthSession.fromCredential(
+                    client,
+                    tokenRefreshExecutor(name()),
+                    credentials.get(OAuth2Properties.CREDENTIAL),
+                    parent));
+      }
+
+      for (String tokenType : TOKEN_PREFERENCE_ORDER) {
+        if (credentials.containsKey(tokenType)) {
+          // exchange the token for an access token using the token exchange flow
+          return Pair.of(
+              credentials.get(tokenType),
+              () ->
+                  AuthSession.fromTokenExchange(
+                      client,
+                      tokenRefreshExecutor(name()),
+                      credentials.get(tokenType),
+                      tokenType,
+                      parent));
+        }
+      }
+    }
+
+    return null;
+  }
+
+  private Long expiresAtMillis(Map<String, String> properties) {
+    if (properties.containsKey(OAuth2Properties.TOKEN_EXPIRES_IN_MS)) {
+      long expiresInMillis =
+          PropertyUtil.propertyAsLong(
+              properties,
+              OAuth2Properties.TOKEN_EXPIRES_IN_MS,
+              OAuth2Properties.TOKEN_EXPIRES_IN_MS_DEFAULT);
+      return System.currentTimeMillis() + expiresInMillis;
+    } else {
+      return null;
+    }
   }
 
   private void checkIdentifierIsValid(TableIdentifier tableIdentifier) {
@@ -1046,6 +1174,29 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
   }
 
+  private static Map<String, String> configHeaders(Map<String, String> properties) {
+    return RESTUtil.extractPrefixMap(properties, "header.");
+  }
+
+  private static Cache<String, AuthSession> newSessionCache(Map<String, String> properties) {
+    long expirationIntervalMs =
+        PropertyUtil.propertyAsLong(
+            properties,
+            CatalogProperties.AUTH_SESSION_TIMEOUT_MS,
+            CatalogProperties.AUTH_SESSION_TIMEOUT_MS_DEFAULT);
+
+    return Caffeine.newBuilder()
+        .expireAfterAccess(Duration.ofMillis(expirationIntervalMs))
+        .removalListener(
+            (RemovalListener<String, AuthSession>)
+                (id, auth, cause) -> {
+                  if (auth != null) {
+                    auth.stopRefreshing();
+                  }
+                })
+        .build();
+  }
+
   public void commitTransaction(SessionContext context, List<TableCommit> commits) {
     Endpoint.check(endpoints, Endpoint.V1_COMMIT_TRANSACTION);
     List<UpdateTableRequest> tableChanges = Lists.newArrayListWithCapacity(commits.size());
@@ -1055,15 +1206,12 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
           UpdateTableRequest.create(commit.identifier(), commit.requirements(), commit.updates()));
     }
 
-    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    client
-        .withAuthSession(contextualSession)
-        .post(
-            paths.commitTransaction(),
-            new CommitTransactionRequest(tableChanges),
-            null,
-            Map.of(),
-            ErrorHandlers.tableCommitHandler());
+    client.post(
+        paths.commitTransaction(),
+        new CommitTransactionRequest(tableChanges),
+        null,
+        headers(context),
+        ErrorHandlers.tableCommitHandler());
   }
 
   @Override
@@ -1082,16 +1230,13 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     do {
       queryParams.put("pageToken", pageToken);
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       ListTablesResponse response =
-          client
-              .withAuthSession(contextualSession)
-              .get(
-                  paths.views(namespace),
-                  queryParams,
-                  ListTablesResponse.class,
-                  Map.of(),
-                  ErrorHandlers.namespaceErrorHandler());
+          client.get(
+              paths.views(namespace),
+              queryParams,
+              ListTablesResponse.class,
+              headers(context),
+              ErrorHandlers.namespaceErrorHandler());
       pageToken = response.nextPageToken();
       views.addAll(response.identifiers());
     } while (pageToken != null);
@@ -1104,10 +1249,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     try {
       checkViewIdentifierIsValid(identifier);
       if (endpoints.contains(Endpoint.V1_VIEW_EXISTS)) {
-        AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-        client
-            .withAuthSession(contextualSession)
-            .head(paths.view(identifier), Map.of(), ErrorHandlers.viewErrorHandler());
+        client.head(paths.view(identifier), headers(context), ErrorHandlers.viewErrorHandler());
         return true;
       } else {
         // fallback in order to work with 1.7.x and older servers
@@ -1130,33 +1272,25 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     checkViewIdentifierIsValid(identifier);
 
-    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
     LoadViewResponse response =
-        client
-            .withAuthSession(contextualSession)
-            .get(
-                paths.view(identifier),
-                LoadViewResponse.class,
-                Map.of(),
-                ErrorHandlers.viewErrorHandler());
+        client.get(
+            paths.view(identifier),
+            LoadViewResponse.class,
+            headers(context),
+            ErrorHandlers.viewErrorHandler());
 
-    Map<String, String> tableConf = response.config();
-    AuthSession tableSession = authManager.tableSession(identifier, tableConf, contextualSession);
+    AuthSession session = tableSession(response.config(), session(context));
     ViewMetadata metadata = response.metadata();
 
     RESTViewOperations ops =
         new RESTViewOperations(
-            client.withAuthSession(tableSession),
-            paths.view(identifier),
-            Map::of,
-            metadata,
-            endpoints);
+            client, paths.view(identifier), session::headers, metadata, endpoints);
 
     return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
   }
 
   @Override
-  public ViewBuilder buildView(SessionContext context, TableIdentifier identifier) {
+  public RESTViewBuilder buildView(SessionContext context, TableIdentifier identifier) {
     return new RESTViewBuilder(context, identifier);
   }
 
@@ -1166,10 +1300,8 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkViewIdentifierIsValid(identifier);
 
     try {
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      client
-          .withAuthSession(contextualSession)
-          .delete(paths.view(identifier), null, Map.of(), ErrorHandlers.viewErrorHandler());
+      client.delete(
+          paths.view(identifier), null, headers(context), ErrorHandlers.viewErrorHandler());
       return true;
     } catch (NoSuchViewException e) {
       return false;
@@ -1185,10 +1317,8 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     RenameTableRequest request =
         RenameTableRequest.builder().withSource(from).withDestination(to).build();
 
-    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-    client
-        .withAuthSession(contextualSession)
-        .post(paths.renameView(), request, null, Map.of(), ErrorHandlers.viewErrorHandler());
+    client.post(
+        paths.renameView(), request, null, headers(context), ErrorHandlers.viewErrorHandler());
   }
 
   private class RESTViewBuilder implements ViewBuilder {
@@ -1220,20 +1350,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
           "View properties set at catalog level through catalog properties: {}",
           viewDefaultProperties);
       return viewDefaultProperties;
-    }
-
-    /**
-     * Get view properties that are enforced at Catalog level through catalog properties.
-     *
-     * @return overriding view properties enforced through catalog properties
-     */
-    private Map<String, String> viewOverrideProperties() {
-      Map<String, String> viewOverrideProperties =
-          PropertyUtil.propertiesWithPrefix(properties(), CatalogProperties.VIEW_OVERRIDE_PREFIX);
-      LOG.info(
-          "View properties enforced at catalog level through catalog properties: {}",
-          viewOverrideProperties);
-      return viewOverrideProperties;
     }
 
     @Override
@@ -1299,8 +1415,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .putAllSummary(EnvironmentContext.get())
               .build();
 
-      properties.putAll(viewOverrideProperties());
-
       CreateViewRequest request =
           ImmutableCreateViewRequest.builder()
               .name(identifier.name())
@@ -1310,26 +1424,18 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .properties(properties)
               .build();
 
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       LoadViewResponse response =
-          client
-              .withAuthSession(contextualSession)
-              .post(
-                  paths.views(identifier.namespace()),
-                  request,
-                  LoadViewResponse.class,
-                  Map.of(),
-                  ErrorHandlers.viewErrorHandler());
+          client.post(
+              paths.views(identifier.namespace()),
+              request,
+              LoadViewResponse.class,
+              headers(context),
+              ErrorHandlers.viewErrorHandler());
 
-      Map<String, String> tableConf = response.config();
-      AuthSession tableSession = authManager.tableSession(identifier, tableConf, contextualSession);
+      AuthSession session = tableSession(response.config(), session(context));
       RESTViewOperations ops =
           new RESTViewOperations(
-              client.withAuthSession(tableSession),
-              paths.view(identifier),
-              Map::of,
-              response.metadata(),
-              endpoints);
+              client, paths.view(identifier), session::headers, response.metadata(), endpoints);
 
       return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
     }
@@ -1361,14 +1467,11 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
                   "Unable to load view %s.%s: Server does not support endpoint %s",
                   name(), identifier, Endpoint.V1_LOAD_VIEW));
 
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      return client
-          .withAuthSession(contextualSession)
-          .get(
-              paths.view(identifier),
-              LoadViewResponse.class,
-              Map.of(),
-              ErrorHandlers.viewErrorHandler());
+      return client.get(
+          paths.view(identifier),
+          LoadViewResponse.class,
+          headers(context),
+          ErrorHandlers.viewErrorHandler());
     }
 
     private View replace(LoadViewResponse response) {
@@ -1398,8 +1501,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .putAllSummary(EnvironmentContext.get())
               .build();
 
-      properties.putAll(viewOverrideProperties());
-
       ViewMetadata.Builder builder =
           ViewMetadata.buildFrom(metadata)
               .setProperties(properties)
@@ -1411,16 +1512,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
       ViewMetadata replacement = builder.build();
 
-      Map<String, String> tableConf = response.config();
-      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
-      AuthSession tableSession = authManager.tableSession(identifier, tableConf, contextualSession);
+      AuthSession session = tableSession(response.config(), session(context));
       RESTViewOperations ops =
           new RESTViewOperations(
-              client.withAuthSession(tableSession),
-              paths.view(identifier),
-              Map::of,
-              metadata,
-              endpoints);
+              client, paths.view(identifier), session::headers, metadata, endpoints);
 
       ops.commit(metadata, replacement);
 
